

# Note set CUDA_BUILD_EMULATION to OFF to enable Device mode compilation.

CMAKE_MINIMUM_REQUIRED(VERSION 2.6.2)

PROJECT(cudacanny)

#set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/CMake/cuda" ${CMAKE_MODULE_PATH})

# find_package(CUDA)
FIND_PACKAGE(CUDA QUIET REQUIRED)

TARGET_LINK_LIBRARIES(
test ${CUDA_CUT_INCLUDE}
)

FIND_PACKAGE(ITK REQUIRED)

INCLUDE(${ITK_USE_FILE})

SUBDIRS(
  src
  )
